--- a/helm/templates/backend.headless.yaml
+++ b/helm/templates/backend.headless.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: dero-cluster
+  name: clusterchess-backend-hl
   namespace: clusterchess-backend
 spec:
   selector:
