--- a/helm/templates/backend.deploy.yaml
+++ b/helm/templates/backend.deploy.yaml
@@ -25,6 +25,14 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
+        - name: POD_IP
+          valueFrom:
+            fieldRef:
+              fieldPath: status.podIP
+        - name: RELEASE_DISTRIBUTION
+          value: "name"
+        - name: RELEASE_NODE
+          value: "dero@$(POD_IP)"
         ports:
         - containerPort: 80
           name: http
